Edit column setting and move comment indent

--- a/literatureReview.tex
+++ b/literatureReview.tex
@@ -1,20 +1,20 @@
-%\documentclass[11pt, oneside]{article}   	% use "amsart" instead of "article" for AMSLaTeX format
-%\usepackage{geometry}                		% See geometry.pdf to learn the layout options. There are lots.
-%\geometry{a4paper}                   		% ... or a4paper or a5paper or ... 
-%\geometry{landscape}                		% Activate for rotated page geometry
-%\usepackage[parfill]{parskip}    		% Activate to begin paragraphs with an empty line rather than an indent
-%\usepackage{graphicx}				% Use pdf, png, jpg, or eps§ with pdflatex; use eps in DVI mode
-								% TeX will automatically convert eps --> pdf in pdflatex		
+%\documentclass[11pt, oneside]{article}   										% use "amsart" instead of "article" for AMSLaTeX format
+%\usepackage{geometry}                											% See geometry.pdf to learn the layout options. There are lots.
+%\geometry{a4paper}                   											% ... or a4paper or a5paper or ... 
+%\geometry{landscape}                											% Activate for rotated page geometry
+%\usepackage[parfill]{parskip}    											% Activate to begin paragraphs with an empty line rather than an indent
+%\usepackage{graphicx}													% Use pdf, png, jpg, or eps§ with pdflatex; use eps in DVI mode
+																	% TeX will automatically convert eps --> pdf in pdflatex		
 %\usepackage{amssymb}
 %SetFonts
 %SetFonts
-%\date{}							% Activate to display a given date or no date
+%\date{}																% Activate to display a given date or no date
 %--------------------------------------------------------------------------------------------------------------------------------------------
 
-\documentclass[11pt, oneside]{article}   	% use "amsart" instead of "article" for AMSLaTeX format
-\usepackage{geometry}                		% See geometry.pdf to learn the layout options. There are lots.
-\geometry{a4paper}                   		% ... or a4paper or a5paper or ... 
-\usepackage{graphicx}				% Use pdf, png, jpg, or eps§ with pdflatex; use eps in DVI mode
+\documentclass[11pt, oneside]{article}   										% use "amsart" instead of "article" for AMSLaTeX format
+\usepackage{geometry}                											% See geometry.pdf to learn the layout options. There are lots.
+\geometry{a4paper}                   											% ... or a4paper or a5paper or ... 
+\usepackage{graphicx}													% Use pdf, png, jpg, or eps§ with pdflatex; use eps in DVI mode
 \usepackage{titling}
 \usepackage{blindtext}
 \usepackage{multicol}
@@ -25,8 +25,8 @@
 
 \begin{document}
 \begin{titlingpage}
-    \maketitle
-    \begin{multicols}{2}
+    \maketitle															% Title and author
+    \begin{multicols*}{2}
     \twocolumn
     \begin{abstract}
         For over a century, fingerprints have been an undisputed
@@ -36,7 +36,7 @@
         fingers, play a key role in the development of new methods to
         protect the innocent of our society.
     \end{abstract}
-    \end{multicols}
+    \end{multicols*}
 \end{titlingpage}
 %\blinddocument
 \end{document}
