Set page  magin

--- a/literatureReview.tex
+++ b/literatureReview.tex
@@ -1,22 +1,22 @@
-%\documentclass[11pt, oneside]{article}   										% use "amsart" instead of "article" for AMSLaTeX format
-%\usepackage{geometry}                											% See geometry.pdf to learn the layout options. There are lots.
-%\geometry{a4paper}                   											% ... or a4paper or a5paper or ... 
-%\geometry{landscape}                											% Activate for rotated page geometry
-%\usepackage[parfill]{parskip}    											% Activate to begin paragraphs with an empty line rather than an indent
-%\usepackage{graphicx}													% Use pdf, png, jpg, or eps§ with pdflatex; use eps in DVI mode
-																	% TeX will automatically convert eps --> pdf in pdflatex		
+%\documentclass[11pt, oneside]{article}										% use "amsart" instead of "article" for AMSLaTeX format
+%\usepackage{geometry}													    % See geometry.pdf to learn the layout options. There are lots.
+%\geometry{a4paper}													        % ... or a4paper or a5paper or ... 
+%\geometry{landscape}													    % Activate for rotated page geometry
+%\usepackage[parfill]{parskip}												% Activate to begin paragraphs with an empty line rather than an indent
+%\usepackage{graphicx}                                                      % Use pdf, png, jpg, or eps§ with pdflatex; use eps in DVI mode		
 %\usepackage{amssymb}
 %SetFonts
 %SetFonts
-%\date{}																% Activate to display a given date or no date
+%\date{}																    % Activate to display a given date or no date
 %--------------------------------------------------------------------------------------------------------------------------------------------
 
-\documentclass[11pt, oneside]{article}   										% use "amsart" instead of "article" for AMSLaTeX format
-\usepackage{geometry}                											% See geometry.pdf to learn the layout options. There are lots.
-\geometry{a4paper}                   											% ... or a4paper or a5paper or ... 
-\usepackage{graphicx}													% Use pdf, png, jpg, or eps§ with pdflatex; use eps in DVI mode
+\documentclass[11pt, oneside]{article}										% use "amsart" instead of "article" for AMSLaTeX format
+\usepackage{geometry}													    % See geometry.pdf to learn the layout options. There are lots.
+\geometry{a4paper}														    % ... or a4paper or a5paper or ... 
+\geometry{left=1.5cm,right=1.5cm,top=1cm,bottom=2cm}                        % Set margin of the paper
+\usepackage{graphicx}													    % Use pdf, png, jpg, or eps§ with pdflatex; use eps in DVI mode
 \usepackage{titling}
-\usepackage{blindtext}
+\usepackage{blindtext}                                                      %
 \usepackage{multicol}
 
 
@@ -24,19 +24,21 @@
 \author{Thanut Sajjakulnukit, Nutcharueta Sihirunwong, Budnampetch Onmee}
 
 \begin{document}
-\begin{titlingpage}
-    \maketitle															% Title and author
-    \begin{multicols*}{2}
-    \twocolumn
-    \begin{abstract}
-        For over a century, fingerprints have been an undisputed
-        personal identifier.  Recent court rulings have sparked
-        interest in verifying unique techniques to make the current
-        methods even more reliable. Ducks, as they do not have
-        fingers, play a key role in the development of new methods to
-        protect the innocent of our society.
-    \end{abstract}
-    \end{multicols*}
-\end{titlingpage}
-%\blinddocument
+    % \begin{titlingpage}
+        \maketitle														    % Title and author
+        \begin{multicols*}{2}
+        \twocolumn
+        \begin{abstract}
+            For over a century, fingerprints have been an undisputed
+            personal identifier.  Recent court rulings have sparked
+            interest in verifying unique techniques to make the current
+            methods even more reliable. Ducks, as they do not have
+            fingers, play a key role in the development of new methods to
+            protect the innocent of our society.
+        \end{abstract}
+        \section{Introduction}
+            sdfsdjfhjsdhfjhsjkdfhjshdjfhjsdf
+        \end{multicols*}
+    %\end{titlingpage}
+    \blinddocument
 \end{document}
