Add introduction, literatureSummary section and some comment

--- a/literatureReview.tex
+++ b/literatureReview.tex
@@ -16,8 +16,8 @@
 \geometry{left=1.5cm,right=1.5cm,top=1cm,bottom=2cm}                        % Set margin of the paper
 \usepackage{graphicx}													    % Use pdf, png, jpg, or eps§ with pdflatex; use eps in DVI mode
 \usepackage{titling}
-\usepackage{blindtext}                                                      %
-\usepackage{multicol}
+\usepackage{blindtext}                                                      % Dummy Text
+\usepackage{multicol}                                                       % Multi column pack
 
 
 \title{Animal Racing Video Game Using Hand Motion}
@@ -29,15 +29,28 @@
         \begin{multicols*}{2}
         \twocolumn
         \begin{abstract}
-            For over a century, fingerprints have been an undisputed
+            For over a century, fingerprints have been an undisputed        % Start Abstract here
             personal identifier.  Recent court rulings have sparked
             interest in verifying unique techniques to make the current
             methods even more reliable. Ducks, as they do not have
             fingers, play a key role in the development of new methods to
             protect the innocent of our society.
         \end{abstract}
-        \section{Introduction}
+
+        \section{Introduction}                                              % Start Introduction here
             sdfsdjfhjsdhfjhsjkdfhjshdjfhjsdf
+            
+        \section{Literature Summary}                                        % Start literature summary here
+            hsjdfhjkshdjkfhjksdfsdfasdjhfkas \\
+
+            \begin{tabular} { | c | c | c | }
+                \hline
+                1 & 2 & 3 \\
+                \hline
+                4 & 5 & 6 \\
+                \hline
+            \end{tabular}
+            
         \end{multicols*}
     %\end{titlingpage}
     \blinddocument
