--- a/literatureReview.tex
+++ b/literatureReview.tex
@@ -75,23 +75,31 @@
     the evaluation of the temporal variability of the strokes. It 
     shows some differences between the stability of the different 
     measurements which can be produced either by the user or the 
-    sensor. Second, An Anthropomorphic Hand with Five Fingers 
+    sensor. \\
+
+    Second, An Anthropomorphic Hand with Five Fingers 
     Controlled by a Motion Leap Device research[2] test leap motion 
     for capturing the movements of a human hand's fingers in different 
     configurations. Then create software to facilitate interaction 
     between a human hand. It conclude that object recognition has 
     a high accuracy rate where contrast between the object and its 
-    background is high. Third, “Evaluate of natural user interface 
+    background is high. \\
+    
+    Third, “Evaluate of natural user interface 
     usability based on the Leap Motion device” focus on users expressed 
     disappointment with the device. Some user state that, for the 
     experience in fact be "natural", it is necessary that the user has 
     the feeling of always being in control, with minimal time and 
-    effort as possible. Fourth, the “Dynamic Simulations in a 3D-Environment 
+    effort as possible. \\
+    
+    Fourth, the “Dynamic Simulations in a 3D-Environment 
     a comparison between Maya and Blender” research [4] is focussing on 
     software tools for creating 3D modeling by comparing process of two 
     software tools. So In our project we choose blender for creating model 
     on the game because it is user friendly like unity3D so we might not have 
-    to research from the beginner. Last, the article describes making 
+    to research from the beginner. \\
+    
+    Last, the article describes making 
     difficult fun in the video game to make a player enjoy and make difficult 
     with other video game [5].It show making a game challenge include a choice 
     of difficulties easy or hard can make everyone can enjoy a video game. 
@@ -99,8 +107,32 @@
     levels: where a crossover of players can enjoy the game without 
     being forced into a particular path.
 
+    
     \section{Reference}
-        description ...
+        \begin{itemize}
+            \item[\textbf{[1]}] Elyoenai Guerra-Segura,Carlos M. Travieso and Jesús B. Alonso, “Study of the 
+            variability of the Leap Motion’s measures for its use to characterize air strokes”, 
+            in Measurement, Vol. 105, pp. 87-97, July 2017
+
+            \item[\textbf{[2]}] Catalin Constantin Moldovan and Ionel Staretu, “An Anthropomorphic Hand with Five 
+            Fingers Controlled by a Motion Leap Device”, in Procedia Engineering, Vol. 181, 
+            pp. 575-582, 2017
+            
+
+            \item[\textbf{[3]}] Christianne Falcao,Ana Catarina Lemos and Marcelo Soares, “Evaluation of Natural User 
+            Interface: A Usability Study Based on the Leap Motion Device”, 
+            in Procedia Manufacturing, Vol. 3, pp. 5490-5495, 2015
+
+            \item[\textbf{[4]}] Dario Senkic, “Dynamic Simulations in a 3D-Environment a comparison between Maya
+            and Blender”, in Academy for technology and environment University of Gävle, 
+            September 2010
+            
+
+            \item[\textbf{[5]}] Darran Jamieson, “Making Difficult Fun: How to Challenge Your Players”, [Online]
+            Available: https://gamedevelopment.
+            tutsplus.com/tutorials/making-difficult-fun-how-to-challenge-your-players--cms-25873 [Accessed: May 20, 2016]
+            
+        \end{itemize}
 
     \end{multicols*}
 \end{document}
