Add university name

--- a/literatureReview.tex
+++ b/literatureReview.tex
@@ -20,8 +20,9 @@
 \usepackage{multicol}                                                       % Multi column pack
 
 
-\title{Animal Racing Video Game Using Hand Motion}
-\author{Thanut Sajjakulnukit, Nutcharueta Sihirunwong, Budnampetch Onmee}
+\title{\textbf{Animal Racing Video Game Using Hand Motion}}
+\author{Thanut Sajjakulnukit, Nutcharueta Sihirunwong, Budnampetch Onmee \\ \\
+    \Large Kasetsart University }
 
 \begin{document}
     \maketitle														        % Title and author
