Refactor some word and update ignore file

--- a/literatureReview.tex
+++ b/literatureReview.tex
@@ -11,7 +11,7 @@
 %--------------------------------------------------------------------------------------------------------------------------------------------
 
 \documentclass[12pt, oneside]{article}										% use "amsart" instead of "article" for AMSLaTeX format
-\usepackage[showframe=true]{geometry}													    % See geometry.pdf to learn the layout options. There are lots.
+\usepackage[showframe=false]{geometry}													    % See geometry.pdf to learn the layout options. There are lots.
 \geometry{a4paper}														    % ... or a4paper or a5paper or ... 
 \geometry{left=1.5cm,right=1.5cm,top=1cm,bottom=2cm}                        % Set margin of the paper
 \usepackage{graphicx}													    % Use pdf, png, jpg, or eps§ with pdflatex; use eps in DVI mode
@@ -31,20 +31,20 @@
     \begin{abstract}                                                        % Start Abstract here
         Nowadays, video games are among the best sources of 
         entertainment that people use to enjoy themselves together.
-            In addition to the entertainment, the player will also gain 
-            knowledge or skills depending on the purpose of the game’s 
-            creators.   LEAP motion technology is used in order to 
-            present new ways for players to interact with our video 
-            game, as well as provide more satisfying experiences for 
-            everybody involved. Moreover, leap motion can increase 
-            challenging in game and also help players are really into 
-            controlling character in game. We  develop a new kind of 
-            game which uses your own hands to control the character 
-            movements via different gestures. This project is not 
-            nly for entertainment, but also for the illustrations 
-            of animal mechanisms so that kids can learn. This 
-            project also lets people participate in some 
-            activities together.
+        In addition to the entertainment, the player will also gain 
+        knowledge or skills depending on the purpose of the game’s 
+        creators. Leap Motion technology is used in order to 
+        present new ways for players to interact with our video 
+        game, as well as provide more satisfying experiences for 
+        everybody involved. Moreover, leap motion can increase 
+        challenging in game and also help players are really into 
+        controlling character in game. We  develop a new kind of 
+        game which uses your own hands to control the character 
+        movements via different gestures. This project is not 
+        nly for entertainment, but also for the illustrations 
+        of animal mechanisms so that kids can learn. This 
+        project also lets people participate in some 
+        activities together.
 
     \end{abstract}
 
@@ -70,7 +70,9 @@
 
     The research paper and publish experiment are related to video game 
     technology and creating process which is the technology that we 
-    focussing in this project. First, the experiment which is working 
+    focussing in this project. \\
+
+    First, the experiment which is working 
     on the variability of the sensor. Then the following is research 
     about detect hand motion and identify hand gesture[1] based on 
     the evaluation of the temporal variability of the strokes. It 
