Edit abstract and introduction

--- a/literatureReview.tex
+++ b/literatureReview.tex
@@ -29,42 +29,35 @@
     \maketitle
     
     \begin{abstract}                                                        % Start Abstract here
-        Nowadays, video games are among the best sources of 
-        entertainment that people use to enjoy themselves together.
-        In addition to the entertainment, the player will also gain 
-        knowledge or skills depending on the purpose of the game’s 
-        creators. Leap Motion technology is used in order to 
-        present new ways for players to interact with our video 
-        game, as well as provide more satisfying experiences for 
-        everybody involved. Moreover, leap motion can increase 
-        challenging in game and also help players are really into 
-        controlling character in game. We  develop a new kind of 
-        game which uses your own hands to control the character 
-        movements via different gestures. This project is not 
-        nly for entertainment, but also for the illustrations 
-        of animal mechanisms so that kids can learn. This 
-        project also lets people participate in some 
-        activities together.
+        Nowadays, video games are among the best sources of entertainment 
+        that people use to enjoy themselves together. In addition to the 
+        entertainment, the player will also gain knowledge or skills 
+        depending on the purpose of the game’s creators. We  develop a new 
+        kind of game that uses Leap Motion to detect your own hands and 
+        control the character movements via different gestures. 
+        The Leap Motion will make game more fun, challenge, and interesting. 
+        This project is not only for entertainment, but also for the 
+        illustrations of animal mechanisms so that kids can learn. 
+        This project also lets people participate in some activities together.
 
     \end{abstract}
 
     \section{Introduction}                                                  % Start Introduction here
-    Currently, the social condition makes a pressure on people’s 
-    stress. Video games are one of the answers to help relieve 
-    stress. Today there are many developers who created the video 
-    game in the market but it doesn't have a new technology to make 
-    a different video game. Leap Motion is one of technology that 
-    can be used with the game. It is hand tracking technology is 
-    designed to be embedded directly into VR/AR headset. \\
+        \IEEEPARstart{C}{urrently}, the social condition makes a pressure 
+        on people’s stress. Video games are one of the answers to help relieve 
+        stress. Today there are many developers who created the video 
+        game in the market but it doesn't have a new technology to make 
+        a different video game. Leap Motion is one of technology that 
+        can be used with the game. It is hand tracking technology is 
+        designed to be embedded directly into VR/AR headset. 
 
-    In this project, we will use Leap Motion technology, one of
-    the new technology that use virtual hand to control object
-    in video game. To create a racing video game by tracking 
-    hand to control character’s movement depending on the 
-    physical characteristic of each animal. The movement of 
-    character in the game is related to movement of the hand 
-    which makes the game more challenge and interesting.
-    
+        In this project, we will use Leap Motion technology, one of
+        the new technology that use virtual hand to control object
+        in video game. To create a racing video game by tracking 
+        hand to control character’s movement depending on the 
+        physical characteristic of each animal. The movement of 
+        character in the game is related to movement of the hand 
+        which makes the game more challenge and interesting.
         
     \section{Literature Summary}                                            % Start literature summary here
 
