--- a/literatureReview.tex
+++ b/literatureReview.tex
@@ -60,50 +60,9 @@
         which makes the game more challenge and interesting.
         
     \section{Literature Summary}                                            % Start literature summary here
+        Literation text here...
 
-    The research paper and publish experiment are related to video game 
-    technology and creating process which is the technology that we 
-    focussing in this project. \\
 
-    First, the experiment which is working 
-    on the variability of the sensor. Then the following is research 
-    about detect hand motion and identify hand gesture[1] based on 
-    the evaluation of the temporal variability of the strokes. It 
-    shows some differences between the stability of the different 
-    measurements which can be produced either by the user or the 
-    sensor. \\
-
-    Second, An Anthropomorphic Hand with Five Fingers 
-    Controlled by a Motion Leap Device research[2] test leap motion 
-    for capturing the movements of a human hand's fingers in different 
-    configurations. Then create software to facilitate interaction 
-    between a human hand. It conclude that object recognition has 
-    a high accuracy rate where contrast between the object and its 
-    background is high. \\
-    
-    Third, “Evaluate of natural user interface 
-    usability based on the Leap Motion device” focus on users expressed 
-    disappointment with the device. Some user state that, for the 
-    experience in fact be "natural", it is necessary that the user has 
-    the feeling of always being in control, with minimal time and 
-    effort as possible. \\
-    
-    Fourth, the “Dynamic Simulations in a 3D-Environment 
-    a comparison between Maya and Blender” research [4] is focussing on 
-    software tools for creating 3D modeling by comparing process of two 
-    software tools. So In our project we choose blender for creating model 
-    on the game because it is user friendly like unity3D so we might not have 
-    to research from the beginner. \\
-    
-    Last, the article describes making 
-    difficult fun in the video game to make a player enjoy and make difficult 
-    with other video game [5].It show making a game challenge include a choice 
-    of difficulties easy or hard can make everyone can enjoy a video game. 
-    There exists the possibility to design a video game for all skill 
-    levels: where a crossover of players can enjoy the game without 
-    being forced into a particular path.
-
-    
     \section{Reference}
         \begin{itemize}
             \item[\textbf{[1]}] Elyoenai Guerra-Segura,Carlos M. Travieso and Jesús B. Alonso, “Study of the 
